force-app/main/default/objects/Event__c/Event__c.object-meta.xml
<CustomObject>
    <description>Event (e.g. webinar) in Customer Success Portal</description>
    <label>Event</label>
    <nameField>
        <displayFormat>E-{000000}</displayFormat>
        <label>Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>