force-app/main/default/objects/Event__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>The description of the event, shown in the portal</description>
    <inlineHelpText>The description of the event, shown in the portal</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>