force-app/main/default/objects/Event__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>The scheduled duration (in minutes) of the event</description>
    <inlineHelpText>The scheduled duration (in minutes) of the event</inlineHelpText>
    <label>Duration (minutes)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>