force-app/main/default/objects/Event__c/fields/Featured__c.field-meta.xml
<CustomField>
    <fullName>Featured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select if this event should be prioritised in the portal</description>
    <inlineHelpText>Select if this event should be prioritised in the portal</inlineHelpText>
    <label>Featured</label>
    <type>Checkbox</type>
</CustomField>