force-app/main/default/objects/Event__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>The product that the event is relevant for, multiples can be selected</description>
    <inlineHelpText>The product that the event is relevant for, multiples can be selected</inlineHelpText>
    <label>Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProductRange</valueSetName>
    </valueSet>
</CustomField>