force-app/main/default/objects/Event__c/fields/Recording_Link__c.field-meta.xml
<CustomField>
    <fullName>Recording_Link__c</fullName>
    <description>The link to the recoding of the event, used in the portal</description>
    <inlineHelpText>The link to the recoding of the event, used in the portal</inlineHelpText>
    <label>Recording Link</label>
    <type>Url</type>
</CustomField>