force-app/main/default/objects/Event__c/fields/Registration_Link__c.field-meta.xml
<CustomField>
    <fullName>Registration_Link__c</fullName>
    <description>The link to the registration for the event, used in the portal</description>
    <inlineHelpText>The link to the registration for the event, used in the portal</inlineHelpText>
    <label>Registration Link</label>
    <type>Url</type>
</CustomField>