force-app/main/default/objects/Event__c/fields/Start__c.field-meta.xml
<CustomField>
    <fullName>Start__c</fullName>
    <description>The date and time when the event is due to start</description>
    <inlineHelpText>The date and time when the event is due to start</inlineHelpText>
    <label>Start</label>
    <type>DateTime</type>
</CustomField>