force-app/main/default/objects/Event__c/fields/Start_Date_is_Past__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_is_Past__c</fullName>
    <description>If start date in past then True.</description>
    <formula>IF(DATEVALUE( Start__c ) &lt; Today(),True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date is Past</label>
    <type>Checkbox</type>
</CustomField>