force-app/main/default/objects/Event__c/fields/Success_Plan__c.field-meta.xml
<CustomField>
    <fullName>Success_Plan__c</fullName>
    <description>The success plans the event is relevant for, multiples can be selected</description>
    <inlineHelpText>The success plans the event is relevant for, multiples can be selected</inlineHelpText>
    <label>Success Plan</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PlanType</valueSetName>
    </valueSet>
</CustomField>