force-app/main/default/objects/Event__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>The title of the event, shown in portal front-end</description>
    <inlineHelpText>The title of the event, shown in portal front-end</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>