force-app/main/default/objects/Event__c/recordTypes/Access_World.recordType-meta.xml
<RecordType>
    <fullName>Access_World</fullName>
    <active>true</active>
    <label>Access World</label>
</RecordType>