force-app/main/default/objects/Event__c/recordTypes/Online_Event.recordType-meta.xml
<RecordType>
    <fullName>Online_Event</fullName>
    <active>true</active>
    <label>Online Event</label>
</RecordType>