force-app/main/default/objects/Event__c/recordTypes/Onsite_Events.recordType-meta.xml
<RecordType>
    <fullName>Onsite_Events</fullName>
    <active>true</active>
    <label>Onsite Events</label>
</RecordType>