force-app/main/default/objects/Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Duration__c</columns>
    <columns>Featured__c</columns>
    <columns>Product__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Recording_Link__c</columns>
    <columns>Registration_Link__c</columns>
    <columns>Start__c</columns>
    <columns>Success_Plan__c</columns>
    <columns>Title__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Events</label>
</ListView>