force-app/main/default/objects/Event__c/listViews/All_My_Events.listView-meta.xml
<ListView>
    <fullName>All_My_Events</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Title__c</columns>
    <columns>Featured__c</columns>
    <columns>Start__c</columns>
    <columns>Success_Plan__c</columns>
    <filterScope>Mine</filterScope>
    <label>All My Events</label>
</ListView>