force-app/main/default/objects/Event__c/listViews/Future_Webinars_w_No_Registration_URL.listView-meta.xml
<ListView>
    <fullName>Future_Webinars_w_No_Registration_URL</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Title__c</columns>
    <columns>Featured__c</columns>
    <columns>Start__c</columns>
    <columns>Registration_Link__c</columns>
    <columns>Success_Plan__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Registration_Link__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Start__c</field>
        <operation>greaterThan</operation>
        <value>TODAY</value>
    </filters>
    <label>Future Webinars w/ No Registration URL</label>
</ListView>