force-app/main/default/objects/Event__c/listViews/Legal_Events.listView-meta.xml
<ListView>
    <fullName>Legal_Events</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Duration__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Product__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Recording_Link__c</columns>
    <columns>Registration_Link__c</columns>
    <columns>Start__c</columns>
    <columns>Success_Plan__c</columns>
    <columns>Title__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>equals</operation>
        <value>Compact+,Compliance Software,Proclaim,Riliance Outsourced Compliance</value>
    </filters>
    <label>Legal Events</label>
</ListView>